crates/reinhardt-core/macros/tests/ui/fail/empty_label.stderr
error: expected identifier
 --> tests/ui/fail/empty_label.rs:8:3
  |
8 |         : "reinhardt.contrib.auth",
  |         ^
